outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-24_14-22-01/evaluations/problem_eval-4001342064658776174_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate distance, potential distance, and a heuristic factor based on the node's position in the path, using a sigmoid function to smooth transitions between phases of the traversal, ensuring a balance between exploration and exploitation.}
                                                                                                  ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate distance, potential distance, and a heuristic factor based on the node's position in the path, using a sigmoid function to smooth transitions between phases of the traversal, ensuring a balance between exploration and exploitation.}
                                                                                                  ^
SyntaxError: unterminated string literal (detected at line 1)
